add_library(Fitgy
    Fitgy
    Application
    Color
    Display
    Entity
    EventHandler
    EventHub
    FieldImageEntity
    GridEntity
    ImageEntity
    LibSDL
    MenuEntity
    MenuItemEntity
    Point
    SplashScreen
    TextEntity
    Vector
    Sound
    Exception/FileNotFound
    MessageBox
    MessageBoxGtk
    MessageBoxWin
    MessageBoxInt
)
