add_library(Fitgy
    Fitgy
    Application
    Color
    Display
    Entity
    EventHandler
    EventHub
    FieldImageEntity
    GridPanel
    ImageEntity
    LibSDL
    MenuEntity
    MenuItemEntity
    Point
    SplashScreen
    TextEntity
    Vector
    Sound
    Exception/FileNotFound
    MessageBox
    MessageBoxGtk
    MessageBoxWin
    MessageBoxInt
    Util/String
    Util/Path
)
